// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onClick 1`] = `
<button
  disabled={undefined}
  onClick={[Function]}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
/>
`;

exports[`onMouseEnter 1`] = `
<button
  disabled={undefined}
  onClick={undefined}
  onMouseEnter={[Function]}
  onMouseLeave={undefined}
/>
`;

exports[`onMouseLeave 1`] = `
<button
  disabled={undefined}
  onClick={undefined}
  onMouseEnter={undefined}
  onMouseLeave={[Function]}
/>
`;
